# qtty

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
qtty/: Cargo.toml  README.md
qtty-core/: Cargo.toml  README.md  build.rs
qtty-core/examples/: diesel_integration.rs  quantity_db_serde.rs
qtty-core/src/: dimension.rs  feature_diesel.rs  feature_pyo3.rs  feature_serde.rs  feature_tiberius.rs  lib.rs  macros.rs  python.rs  quantity.rs  scalar.rs  unit.rs  unit_arithmetic.rs
qtty-core/src/units/: acceleration.rs  amount.rs  angular.rs  angular_rate.rs  area.rs  density.rs  electrical.rs  energy.rs  force.rs  frequency.rs  length.rs  mass.rs  mod.rs  power.rs  pressure.rs  temperature.rs  time.rs  unitless.rs  velocity.rs  volume.rs
qtty-core/src/units/angular/: astro.rs  mod.rs  navigation.rs
qtty-core/src/units/area/: customary.rs  land_area.rs  mod.rs
qtty-core/src/units/length/: astro.rs  customary.rs  fundamental_physics.rs  mod.rs  navigation.rs
qtty-core/src/units/mass/: astro.rs  customary.rs  fundamental_physics.rs  mod.rs
qtty-core/src/units/photometry/: mod.rs
qtty-core/src/units/power/: astro.rs  customary.rs  fundamental_physics.rs  mod.rs
qtty-core/src/units/radiometry/: mod.rs
qtty-core/src/units/solid_angle/: mod.rs
qtty-core/src/units/time/: astro.rs  julian_time.rs  mod.rs
qtty-core/src/units/volume/: customary.rs  mod.rs
qtty-core/tests/: audit_regressions.rs  core.rs  default_coverage_gaps.rs  diesel.rs  integers.rs  no_cross_unit_ops.rs  pyo3.rs  qtty_derive_coverage.rs  quantity_f32.rs  scalar_decimal.rs  scalar_f32.rs  scalar_f64_real.rs  scalar_rational.rs  serde.rs  tiberius.rs  unit_arithmetic.rs  unit_catalog_coverage.rs
qtty-core/tests/fixtures/qtty_derive/: missing_dimension.rs  missing_dimension.stderr  missing_unit_attribute.rs  missing_unit_attribute.stderr  unknown_field.rs  unknown_field.stderr
qtty-derive/: README.md
qtty-derive/src/: lib.rs
qtty-ffi/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  cbindgen.toml  discriminants.csv  units.csv  units.csv.md
qtty-ffi/include/: qtty_ffi.h
qtty-ffi/src/: ffi.rs  ffi_serde.rs  helpers.rs  lib.rs  macros.rs  registry.rs  types.rs
qtty-ffi/src/ffi/: derived.rs  mod.rs  quantity.rs  shared.rs  unit.rs  version.rs
qtty-ffi/tests/: consistency.rs  csv_inventory_consistency.rs  integration_tests.rs
qtty/examples/: all_units.rs  angles.rs  astronomy.rs  dimensional_arithmetic.rs  python_integration.rs  quickstart.rs  ratios.rs  serde_with_unit.rs  serialization.rs  serialization_advanced.rs
qtty/src/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  lib.rs  scalar_aliases.rs
qtty/tests/: custom_unit_extensions.rs  integration_tests.rs  inventory_consistency.rs  qtty_vec_feature_matrix.rs
qtty/tests/fixtures/qtty-vec-no-std/: Cargo.toml
qtty/tests/fixtures/qtty-vec-no-std-alloc/: Cargo.toml
qtty/tests/fixtures/qtty-vec-no-std-alloc/src/: lib.rs
qtty/tests/fixtures/qtty-vec-no-std/src/: lib.rs
qtty/tests/fixtures/qtty-vec-std/: Cargo.toml
qtty/tests/fixtures/qtty-vec-std/src/: lib.rs
units/: Cargo.toml
units-core/: Cargo.toml
units-core/src/: lib.rs
units-core/src/units/: angular.rs  frequency.rs  unitless.rs  velocity.rs
units-derive/: Cargo.toml  README.md
units-derive/src/: lib.rs
