[workspace]
members = ["qtty-core", "qtty-derive", "qtty", "qtty-ffi"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/Siderust/qtty"
keywords = ["astronomy", "quantities", "science"]
categories = ["science", "aerospace"]
