[package]
name = "qtty-core"
description = "Core types for zero-cost strongly-typed physical quantities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/qtty-core"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
pyo3 = ["dep:pyo3"]
tiberius = ["dep:tiberius"]
diesel = ["dep:diesel"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
pyo3 = { version = "0.27.2", optional = true, features = ["auto-initialize"] }
tiberius = { version = "0.12", default-features = false, optional = true }
diesel = { version = "2.1", default-features = false, optional = true }
libm = "0.2"
qtty-derive = { path = "../qtty-derive" }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
