[package]
name = "qtty-core"
description = "Core types for zero-cost strongly-typed physical quantities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/qtty-core"

[features]
default = ["std", "cross-unit-ops"]
std = []
cross-unit-ops = []
serde = ["dep:serde"]

# Optional support
scalar-decimal = ["rust_decimal"]
scalar-rational = ["num-rational"]
pyo3 = ["dep:pyo3"]
tiberius = ["dep:tiberius"]
diesel = ["dep:diesel"]

[dependencies]
rust_decimal = { version = "1.36", optional = true, features = ["maths"] }
num-rational = { version = "0.4", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
pyo3 = { version = "0.27.2", optional = true, features = ["auto-initialize"] }
tiberius = { version = "0.12", default-features = false, optional = true }
diesel = { version = "2.1", default-features = false, optional = true }
libm = "0.2"
typenum = "1.17"
qtty-derive = { version = "0.3.0", path = "../qtty-derive" }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
