[package]
name = "qtty-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ffi", "quantities", "c", "interop", "science"]
categories = ["science", "development-tools::ffi", "api-bindings"]
description = "C-compatible FFI bindings for qtty physical quantities and conversions"
readme = "README.md"
documentation = "https://docs.rs/qtty-ffi"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
[dependencies]
qtty = { version = "0.7.0", path = "../qtty", features = ["all-units"] }
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.28.2", optional = true }

[features]
pyo3 = ["dep:pyo3"]
qtty_serde = ["qtty/serde"]

[build-dependencies]
cbindgen = "0.29.2"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
approx = "0.5"
qtty-core = { version = "0.7.0", path = "../qtty-core" }
serde_json = "1.0"
