[package]
name = "qtty"
description = "Strongly typed physical and astronomical quantities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/qtty"

[features]
default = ["std"]
alloc = []
std = ["alloc", "qtty-core/std"]
serde = ["qtty-core/serde"]

# Scalar type support
scalar-decimal = ["qtty-core/scalar-decimal"]
scalar-rational = ["qtty-core/scalar-rational"]
pyo3 = ["qtty-core/pyo3", "dep:pyo3"]
tiberius = ["qtty-core/tiberius"]
diesel = ["qtty-core/diesel"]

[dependencies]
qtty-core = { version = "0.3.0", path = "../qtty-core", default-features = false }
qtty-derive = { version = "0.3.0", path = "../qtty-derive" }
pyo3 = { version = "0.27.2", optional = true, features = ["auto-initialize"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "python_integration"
required-features = ["pyo3"]
